Build against BentoBox 1.18 API